--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -491,7 +491,7 @@ main .sectionForm form input {
 }
 main .sectionForm form button {
   padding: 2px;
-  border: 0px solid #e3e3e3;
+  border: 1px solid #353535;
   border-radius: 5px;
   background-color: transparent;
   transition: all 0.3s ease;
@@ -503,7 +503,6 @@ main .sectionForm form button {
   font-size: 23px;
   color: #353535;
   cursor: pointer;
-  box-shadow: 0px 0px 20px 1px black;
   box-shadow: none;
   margin-top: 0px;
   border-radius: 60px;
@@ -514,7 +513,7 @@ main .sectionForm form button:hover {
 main .sectionForm button {
   margin-top: -60px;
   padding: 2px;
-  border: 0px solid #e3e3e3;
+  border: 1px solid #353535;
   border-radius: 5px;
   background-color: transparent;
   transition: all 0.3s ease;
@@ -526,7 +525,6 @@ main .sectionForm button {
   font-size: 23px;
   color: #353535;
   cursor: pointer;
-  box-shadow: 0px 0px 20px 1px black;
   border-radius: 60px;
 }
 main .sectionForm button:hover {
