--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -43,7 +43,7 @@ $fontPlaywrite: "Playwrite CU", cursive;
 }
 @mixin buttonDesign($width: 100%){
     padding: 2px;
-    border: 0px solid $lightFontColor;
+    border: 1px solid $darkFontColor;
     border-radius: 5px;
     background-color: transparent;
     transition: all 0.3s ease;
@@ -55,7 +55,6 @@ $fontPlaywrite: "Playwrite CU", cursive;
     font-size: $lg;
     color: $darkFontColor;
     cursor: pointer;
-    box-shadow: 0px 0px 20px 1px black;
 }
 @mixin inputDesign($width: 300px, $height: 40px){
     border-radius: 5px;
